# chief-of-staff

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
agent/: .dockerignore  Dockerfile  biome.json  next.config.ts  package-lock.json  package.json
agent/src/app/: globals.css  layout.tsx  page.tsx
api/: .dockerignore  celerybeat-schedule  lambda-requirements.txt  pyproject.toml  test_workers.py
api/alembic/: env.py
api/alembic/versions/: 0001_resize_embedding_512_to_768.py  0002_resize_embedding_768_to_3072.py  0003_resize_embedding_3072_to_1536.py
api/app/: config.py  dependencies.py  main.py
api/app/agent/: graph.py  state.py
api/app/agent/nodes/: executor_node.py  memory_writer_node.py  router_node.py
api/app/agent/prompts/: system.py
api/app/agent/tools/: __init__.py  calendar_tools.py  gmail_tools.py  memory_tools.py
api/app/api/v1/: admin.py  auth.py  calendar.py  chat.py  email.py  memory.py  router.py
api/app/core/: cache.py  events.py  exceptions.py  limiter.py  logging.py  middleware.py  security.py
api/app/db/: base.py  session.py
api/app/db/models/: __init__.py  conversation.py  memory_node.py  oauth_token.py  tenant.py  user.py
api/app/integrations/google/: calendar.py  gmail.py  oauth.py
api/app/integrations/llm/: client.py
api/app/memory/: episodic.py  graph_store.py  manager.py  procedural.py  semantic.py
api/app/schemas/: auth.py  calendar.py  chat.py  email.py  memory.py
api/app/services/: auth_service.py  calendar_service.py  chat_service.py  email_service.py  memory_service.py
api/app/websocket/: chat_ws.py
api/app/workers/: calendar_sync.py  celery_app.py  email_sync.py  memory_consolidation.py
api/docker/: Dockerfile  Dockerfile.worker
api/lambdas/: calendar_sync_handler.py  email_sync_handler.py  memory_consolidation_handler.py
api/tests/: conftest.py
api/tests/integration/: conftest.py  test_auth_api.py  test_chat_api.py  test_health.py  test_memory_api.py
api/tests/unit/: conftest.py
api/tests/unit/test_agent/: test_graph.py  test_nodes.py
api/tests/unit/test_memory/: test_manager.py
terraform/: apprunner.tf  ecr.tf  ecs.tf  elasticache.tf  github_oidc.tf  lambda.tf  main.tf  network.tf  outputs.tf  s3_cloudfront.tf  variables.tf
(+26 files in other folders)
