[project]
name = "agentic-ai-platform"
version = "2026.6.13"
description = "Multi-tenant Chief of Staff AI — email, calendar, tasks, and dynamic memory"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
    "python-multipart>=0.0.9,<1",
    "websockets>=13.0,<14",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.29.0,<1",
    "alembic>=1.13.0,<2",
    "pgvector>=0.3.0,<1",
    "redis[asyncio]>=5.0.0,<8",
    "celery[redis]>=5.4.0,<6",
    "flower>=2.0.0,<3",
    "openai>=1.54.0,<3",
    "langgraph>=0.2.0,<1",
    "neo4j>=5.25.0,<6",
    "google-auth>=2.35.0,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "google-auth-httplib2>=0.2.0,<1",
    "google-api-python-client>=2.149.0,<3",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt>=3.0,<4.0",
    "cryptography>=43.0.0,<44",
    "pydantic[email]>=2.9.0,<3",
    "pydantic-settings>=2.5.0,<3",
    "python-dotenv>=1.0.0,<2",
    "email-validator>=2.2.0,<3",
    "slowapi>=0.1.9,<1",
    "httpx>=0.27.0,<1",
    "aiohttp>=3.11.0,<4",
    "tenacity>=9.0.0,<10",
    "structlog>=24.4.0,<26",
    "python-json-logger>=2.0.0,<3",
    "google-generativeai>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=30.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
# B008: FastAPI Depends() as default arg (intentional)
# E501: Long lines in tool schema strings / docstrings — not worth wrapping
# F821: SQLAlchemy forward refs (e.g. Mapped["User"]) work at runtime
ignore = ["B008", "E501", "F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
